force-app/main/default/objects/Price_List__c/fields/Adjustedgross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Adjustedgross_Margin__c</fullName>
    <label>Adjusted Gross Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>