force-app/main/default/objects/Price_List__c/fields/BMP_Created__c.field-meta.xml
<CustomField>
    <fullName>BMP_Created__c</fullName>
    <label>BPM Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>