force-app/main/default/objects/Price_List__c/fields/Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Business_Model__c</fullName>
    <label>Business Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Own Formulation</fullName>
            </value>
            <value>
                <fullName>Own Tech</fullName>
            </value>
            <value>
                <fullName>Own Formulation/Formulation Trading(Bulk Packing)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>