force-app/main/default/objects/Price_List__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>