force-app/main/default/objects/Price_List__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>