force-app/main/default/objects/Price_List__c/fields/DIFF__c.field-meta.xml
<CustomField>
    <fullName>DIFF__c</fullName>
    <label>DIFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>