force-app/main/default/objects/Price_List__c/fields/FOB_Price__c.field-meta.xml
<CustomField>
    <fullName>FOB_Price__c</fullName>
    <label>FOB Bulking Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>