force-app/main/default/objects/Price_List__c/fields/Formula_Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Formula_Basic_Price__c</fullName>
    <label>Formula Basic Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>