force-app/main/default/objects/Price_List__c/fields/Formula_RMB_Cost__c.field-meta.xml
<CustomField>
    <fullName>Formula_RMB_Cost__c</fullName>
    <label>Formula RMB Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>