force-app/main/default/objects/Price_List__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <label>Gross Profit</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>