force-app/main/default/objects/Price_List__c/fields/Indian_Origin__c.field-meta.xml
<CustomField>
    <fullName>Indian_Origin__c</fullName>
    <label>Indian Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>