force-app/main/default/objects/Price_List__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <formula>IF( ISNULL(Change_Date__c),false,IF((TODAY()-VALUE($Label.Days) )&gt;Change_Date__c,false,true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification</label>
    <type>Checkbox</type>
</CustomField>