force-app/main/default/objects/Price_List__c/fields/Operation_Helper__c.field-meta.xml
<CustomField>
    <fullName>Operation_Helper__c</fullName>
    <label>Operation Helper</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>