force-app/main/default/objects/Price_List__c/fields/Product_over_view__c.field-meta.xml
<CustomField>
    <fullName>Product_over_view__c</fullName>
    <label>Product over view</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>