force-app/main/default/objects/Price_List__c/fields/Purdep_Info__c.field-meta.xml
<CustomField>
    <fullName>Purdep_Info__c</fullName>
    <label>Purchasing Department Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>