force-app/main/default/objects/Price_List__c/fields/Regular_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Regular_Delivery_Time__c</fullName>
    <label>Regular Delivery Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>