force-app/main/default/objects/Price_List__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <label>Responsible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>