force-app/main/default/objects/Price_List__c/fields/Responsible_Account__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Account__c</fullName>
    <label>Responsible Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>