force-app/main/default/objects/Price_List__c/fields/This_Week_Other_Cost__c.field-meta.xml
<CustomField>
    <fullName>This_Week_Other_Cost__c</fullName>
    <label>This Week Other Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>