force-app/main/default/objects/Price_List__c/fields/Two_Weeks_Basic_Price__c.field-meta.xml
<CustomField>
    <fullName>Two_Weeks_Basic_Price__c</fullName>
    <label>Two Weeks Basic Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>