force-app/main/default/objects/Price_List__c/fields/Versions__c.field-meta.xml
<CustomField>
    <fullName>Versions__c</fullName>
    <label>Versions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>