force-app/main/default/objects/Price_List__c/listViews/Change_List.listView-meta.xml
<ListView>
    <fullName>Change_List</fullName>
    <columns>NAME</columns>
    <columns>FOB_Price__c</columns>
    <columns>Old_Price__c</columns>
    <columns>Unit__c</columns>
    <columns>Currency__c</columns>
    <columns>BMP_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Notification__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Change List</label>
</ListView>