force-app/main/default/objects/Price_List__c/listViews/Copy_of.listView-meta.xml
<ListView>
    <fullName>Copy_of</fullName>
    <columns>NAME</columns>
    <columns>Business_Model__c</columns>
    <columns>Regular_Delivery_Time__c</columns>
    <columns>FOB_Price__c</columns>
    <columns>Currency__c</columns>
    <columns>Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>